sync FK8 up to Diel spheres p144

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1316,6 +1316,104 @@ Terahertz spectroscopy of ferroelectrics and related materials
   booktitle={2012 37th International Conference on Infrared, Millimeter, and Terahertz Waves},
   year={2012}
 }
+@article{marques2011bulk,
+  title={Bulk metamaterials made of resonant rings},
+  author={Marques, Ricardo and Jelinek, Lukas and Freire, Manuel J and Baena, Juan Domingo and Lapine, Mikhail},
+  journal={Proceedings of the IEEE},
+  volume={99},
+  number={10},
+  pages={1660--1668},
+  year={2011},
+  publisher={Institute of Electrical and Electronics Engineers}
+}
+%In this formalism, even the permittivity of isotropic media has a different effective value for transverse and longitudinal waves \cite{marques2011bulk}. 
+% "when spatial dispersion is present, the magnetic susceptibility becomes a tensor [29], even if the conditions for an isotropic behavior in the long wavelength limit [24] are fulfilled"
+%  \cite{marques2011bulk}low-frequency narrow-band applications - for instance, in magnetic resonance medical imaging (MRI) using swiss rolls seem to be the most promising ones
+@article{baena2006electrically,
+  title={Electrically small isotropic three-dimensional magnetic resonators for metamaterial design},
+  author={Baena, JD and Jelinek, L and Marques, R and Zehentner, J},
+  journal={Applied Physics Letters},
+  volume={88},
+  number={13},
+  pages={134108},
+  year={2006},
+  publisher={AIP Publishing}
+}
+%  \cite{baena2006electrically} topologies with higher symmetry than those of SRR
+%  \cite{baena2006electrically} the recently proposed cubic array of modified SRRs and wires 14 provides an isotropic medium... 
+		the proposed structure is difficult to implement in practice. First of all, very high permittivity dielectrics are involved in its design
+%  \cite{baena2006electrically} BIISOTROPY magneto- electric couplings may cause the medium to be bi-isotropic, or chiral. 16
+%  \cite{baena2006electrically} a cubic array of SRRs ... the whole array satisfies inversion symmetry
+	if the couplings among the SRRs are neglected, such basic unit has an isotropic response	
+	couplings between adjacent elements destroy the isotropy when the basic unit do not have the appropriate symmetry
+%  \cite{baena2006electrically} This modification substitutes the SRRs by the nonbianisotropic SRRs
+	isotropic behavior
+	the analyzed structure has no inversion symmetry .. may show "bi-isotropy"
+	rotation of the plane of polarization of the transmitted wave is clearly observed
+@article{baena2007towards,
+  title={Towards a systematic design of isotropic bulk magnetic metamaterials using the cubic point groups of symmetry},
+  author={Baena, JD and Jelinek, L and Marqu{\'e}s, R},
+  journal={Physical Review B},
+  volume={76},
+  number={24},
+  pages={245115},
+  year={2007},
+  publisher={APS}
+}
+%  \cite{baena2007towards} topologies with higher symmetry than those of SRR
+%  \cite{baena2007towards} the cubic arrangement depicted in Fig. 3.1a was proposed. However, this proposal is incorrect [20*
+%  \cite{baena2007towards} approximation by an “extended” magnetic dipole was latter shown 
+% (whether electric and magnetic) subsystems can be combined in order to obtain a new system, whose electromagnetic properties were mainly the superposition of the magnetic and the electric properties of each subsystem, is an interesting and controversial issue
+%  \cite{baena2007towards} 3DSRR lattices of dielectric spheres -- the isotropy is ensured by simply placing them in a cubic lattice
+@article{delgado2009analytical,
+  title={Analytical circuit model for split ring resonators in the far infrared and optical frequency range},
+  author={Delgado, V and Sydoruk, O and Tatartschuk, E and Marqu{\'e}s, R and Freire, MJ and Jelinek, L},
+  journal={Metamaterials},
+  volume={3},
+  number={2},
+  pages={57--62},
+  year={2009},
+  publisher={Elsevier}
+}
+%  \cite{delgado2009analytical} shows that the frequency of collision grows dramatically for particle radius below 100 nm
+%  \cite{delgado2009analytical}The kinetic inductance scales as 1/r, whereas the magnetic inductance scales as r
+%  \cite{delgado2009analytical}The accuracy of our model in determining the resonant frequency of SRRs is typically around a 10%.
+@article{jelinek2009artificial,
+  title={Artificial magnetism and left-handed media from dielectric rings and rods},
+  author={Jelinek, L and Marqu{\'e}s, R},
+  journal={Journal of Physics: Condensed Matter},
+  volume={22},
+  number={2},
+  pages={025902},
+  year={2009},
+  publisher={IOP Publishing}
+}
+Ref. [24]
+%  \cite{jelinek2009artificial} The symmetry pattern depicted in Fig. 3.2 (was used) for a combination of dielectric resonators with a so-called dielectric wire medium [24*
+%  \cite{jelinek2009artificial} combined ring-wire system ... containing dielectric rings and a dielectric wire medium [24*
+%  \cite{jelinek2009artificial} uniform dielectric rings (DRs) present unconventional LC
+%  \cite{jelinek2009artificial} in order to achieve an electrical size a/λ 0 ∼ 0 . 1, the real part of the ring permittivity must be ε ∼ 100 ε 0
+@article{jelinek2008periodic,
+  title={Periodic arrangements of chiral scatterers providing negative refractive index bi-isotropic media},
+  author={Jelinek, L and Marqu{\'e}s, R and Mesa, F and Baena, JD},
+  journal={Physical Review B},
+  volume={77},
+  number={20},
+  pages={205110},
+  year={2008},
+  publisher={APS}
+}
+%  \cite{jelinek2008periodic} balanced chiral composite [25* ... example of an important class of isotropic media supporting backward waves, in this case working for circularly polarized waves
+@article{marques2007negative,
+  title={Negative refraction from balanced quasi-planar chiral inclusions},
+  author={Marques, Ricardo and Jelinek, Lukas and Mesa, Francisco},
+  journal={Microwave and Optical Technology Letters},
+  volume={49},
+  number={10},
+  pages={2606--2609},
+  year={2007},
+  publisher={Wiley Online Library}
+}
 @article{holloway2003double,
   title={A double negative (DNG) composite medium composed of magnetodielectric spherical particles embedded in a matrix},
   author={Holloway, Christopher L and Kuester, Edward F and Baker-Jarvis, James and Kabos, Pavel},
@@ -1326,7 +1424,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2003},
   publisher={IEEE}
 }
-
 
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
@@ -2943,143 +3040,6 @@ homogenization [31, 32]."
 
 "problems in combination virtually put a usable perfect lens into the realm of science fiction"
 
-
-@article{marques2011bulk,
-  title={Bulk metamaterials made of resonant rings},
-  author={Marques, Ricardo and Jelinek, Lukas and Freire, Manuel J and Baena, Juan Domingo and Lapine, Mikhail},
-  journal={Proceedings of the IEEE},
-  volume={99},
-  number={10},
-  pages={1660--1668},
-  year={2011},
-  publisher={Institute of Electrical and Electronics Engineers}
-}
-Ref. [1]
-
-%In this formalism, even the permittivity of isotropic media has a different effective value for transverse and longitudinal waves \cite{marques2011bulk}. 
-% "when spatial dispersion is present, the magnetic susceptibility becomes a tensor [29], even if the conditions for an isotropic behavior in the long wavelength limit [24] are fulfilled"
-
-
-% TODO \cite{marques2011bulk}low-frequency narrow-band applications - for instance, in magnetic resonance medical imaging (MRI) using swiss rolls seem to be the most promising ones
-
-
-@article{baena2006electrically,
-  title={Electrically small isotropic three-dimensional magnetic resonators for metamaterial design},
-  author={Baena, JD and Jelinek, L and Marques, R and Zehentner, J},
-  journal={Applied Physics Letters},
-  volume={88},
-  number={13},
-  pages={134108},
-  year={2006},
-  publisher={AIP Publishing}
-}
-Ref. [19]
-% TODO \cite{baena2006electrically} topologies with higher symmetry than those of SRR
-% TODO \cite{baena2006electrically} the recently proposed cubic array of modified SRRs and wires 14 provides an isotropic medium... 
-		the proposed structure is difficult to implement in practice. First of all, very high permittivity dielectrics are involved in its design
-		
-% TODO \cite{baena2006electrically} BIISOTROPY magneto- electric couplings may cause the medium to be bi-isotropic, or chiral. 16
-
-% TODO \cite{baena2006electrically} a cubic array of SRRs ... the whole array satisfies inversion symmetry
-	if the couplings among the SRRs are neglected, such basic unit has an isotropic response	
-	couplings between adjacent elements destroy the isotropy when the basic unit do not have the appropriate symmetry
-% TODO \cite{baena2006electrically} This modification substitutes the SRRs by the nonbianisotropic SRRs
-	isotropic behavior
-	the analyzed structure has no inversion symmetry .. may show "bi-isotropy"
-	rotation of the plane of polarization of the transmitted wave is clearly observed
-
-
-
-@article{baena2007towards,
-  title={Towards a systematic design of isotropic bulk magnetic metamaterials using the cubic point groups of symmetry},
-  author={Baena, JD and Jelinek, L and Marqu{\'e}s, R},
-  journal={Physical Review B},
-  volume={76},
-  number={24},
-  pages={245115},
-  year={2007},
-  publisher={APS}
-}
-Ref. [20]
-% TODO \cite{baena2007towards} topologies with higher symmetry than those of SRR
-% TODO \cite{baena2007towards} the cubic arrangement depicted in Fig. 3.1a was proposed. However, this proposal is incorrect [20*
-% TODO \cite{baena2007towards} approximation by an “extended” magnetic dipole was latter shown
-
-         -- COMBININGMM (whether electric and magnetic) subsystems can be combined in order to obtain a new system, whose electromagnetic properties were mainly the superposition of the magnetic and the electric properties of each subsystem, is an interesting and controversial issue
-
-
-% TODO \cite{baena2007towards} 3DSRR lattices of dielectric spheres -- the isotropy is ensured by simply placing them in a cubic lattice
-
-
-
-@article{delgado2009analytical,
-  title={Analytical circuit model for split ring resonators in the far infrared and optical frequency range},
-  author={Delgado, V and Sydoruk, O and Tatartschuk, E and Marqu{\'e}s, R and Freire, MJ and Jelinek, L},
-  journal={Metamaterials},
-  volume={3},
-  number={2},
-  pages={57--62},
-  year={2009},
-  publisher={Elsevier}
-}
-Ref. [22]
-% TODO \cite{delgado2009analytical} shows that the frequency of collision grows dramatically for particle radius below 100 nm
-
-% TODO \cite{delgado2009analytical}The kinetic inductance scales as 1/r, whereas the magnetic inductance scales as r
-
-% TODO \cite{delgado2009analytical}The accuracy of our model in determining the resonant frequency of SRRs is typically around a 10%.
-
-
-
-@article{jelinek2009artificial,
-  title={Artificial magnetism and left-handed media from dielectric rings and rods},
-  author={Jelinek, L and Marqu{\'e}s, R},
-  journal={Journal of Physics: Condensed Matter},
-  volume={22},
-  number={2},
-  pages={025902},
-  year={2009},
-  publisher={IOP Publishing}
-}
-Ref. [24]
-% TODO \cite{jelinek2009artificial} The symmetry pattern depicted in Fig. 3.2 (was used) for a combination of dielectric resonators with a so-called dielectric wire medium [24*
-
-% TODO \cite{jelinek2009artificial} combined ring-wire system ... containing dielectric rings and a dielectric wire medium [24*
-
-% TODO \cite{jelinek2009artificial} uniform dielectric rings (DRs) present unconventional LC
-
-% TODO \cite{jelinek2009artificial} in order to achieve an electrical size a/λ 0 ∼ 0 . 1, the real part of the ring permittivity must be ε ∼ 100 ε 0
-
-
-
-@article{jelinek2008periodic,
-  title={Periodic arrangements of chiral scatterers providing negative refractive index bi-isotropic media},
-  author={Jelinek, L and Marqu{\'e}s, R and Mesa, F and Baena, JD},
-  journal={Physical Review B},
-  volume={77},
-  number={20},
-  pages={205110},
-  year={2008},
-  publisher={APS}
-}
-Ref. [25]
-% TODO \cite{jelinek2008periodic} balanced chiral composite [25* ... example of an important class of isotropic media supporting backward waves, in this case working for circularly polarized waves
-
-BIISOTROPY
-
-
-
-@article{marques2007negative,
-  title={Negative refraction from balanced quasi-planar chiral inclusions},
-  author={Marques, Ricardo and Jelinek, Lukas and Mesa, Francisco},
-  journal={Microwave and Optical Technology Letters},
-  volume={49},
-  number={10},
-  pages={2606--2609},
-  year={2007},
-  publisher={Wiley Online Library}
-}
-Ref. [26]
 
 
 
