--- a/result.tex
+++ b/result.tex
@@ -455,14 +455,14 @@ In all cases, the outer ring radius was $\rho = 30$ $\mu$m, conductor cross-sect
 %}}} /section
 \section{Combined electric and magnetic resonator} \label{section_emsrr} %{{{
 \paragraph{Effect of the central bar in SRR}%{{{
-In contrast to all previously discussed structures, the fundamental resonance of a split-ring resonator (SRR) couples to the field through a magnetic dipole and the electric current flows around the circumference of the SRR. Therefore, the frequency of the magnetic resonance does not change significantly even when central bar parallel to the electric field and the $x$-axis is added (see Fig. \ref{fg_SRR_elmag}a). From the symmetry of the resonant fields it follows that zero current flows through the central bar. 
+In contrast to all previously discussed structures, the fundamental resonance of a split-ring resonator (SRR) couples to the field through a magnetic dipole and the electric current flows around the circumference of the SRR. Therefore, the frequency of the magnetic resonance does not change significantly even when central bar parallel to the incident electric field is added (see Fig. \ref{fg_SRR_elmag}a). From the symmetry of the resonant fields it follows that in the magnetic resonance zero current flows through the central bar. 
 
-However, a new electric resonance (Fig. \ref{fg_emcSRR_resonances}b) is introduced by adding the bar, characteristic by that the current conducted by the central bar is antiparallel to the current conducted by both SRR arms. The corresponding frequency is lower compared to the original parallel electric resonance (Fig. \ref{fg_emcSRR_resonances}c), and similar to the frequency of the magnetic resonance (Fig. \ref{fg_emcSRR_resonances}a).  
-\begin{figure}[h] \caption[Drawings of the modification of the split-ring resonator with a central bar]{\textbf{(a)} A modification of a split-ring resonator with a central bar, \textbf{(b)} a similar structure where the central bar was split by a capacitor with pad radius $\rho_c$, allowing to tune the antiparallel electric resonance} \label{fg_SRR_elmag} \centering 
+However, a new electric resonance (Fig. \ref{fg_emcSRR_resonances}b) is introduced by adding the bar, characterized by a current flowing through the central bar antiparallel to that conducted through the outer SRR arms. Simulations have shown that the corresponding frequency is lower compared to the original parallel electric resonance (Fig. \ref{fg_emcSRR_resonances}c), and similar to the frequency of the magnetic resonance (Fig. \ref{fg_emcSRR_resonances}a).  
+\begin{figure}[h] \caption[Drawings of the modification of the split-ring resonator with a central bar]{\textbf{(a)} A modification of a split-ring resonator with a central bar, \textbf{(b)} a similar structure where the central bar was split by another circular capacitor with a radius $\rho_c$, allowing to tune the antiparallel electric resonance} \label{fg_SRR_elmag} \centering 
 \begin{overpic}[height=0.25\textwidth]{img/drawing_eSRRpad.pdf}\put (1,80) {\textbf{(a)}}\end{overpic}\quad\quad\quad
 \begin{overpic}[height=0.25\textwidth]{img/drawing_emcSRRpad_sizes.pdf}\put (1,80) {\textbf{(b)}}\end{overpic}
 \end{figure}
-\begin{figure}[b] \caption[Drawings of the resonance modes in split-ring resonators]{Three low-frequency resonances in the combined SRR: \textbf{(a)} magnetic resonance, \textbf{(b)} antiparallel electric resonance, \textbf{(c)} parallel electric resonance.\\ The actual order of the first two resonances in the spectrum is determined by the inner capacitor radius $\rho_c$ or other parameters of the structure.} \label{fg_emcSRR_resonances} \centering 
+\begin{figure}[b] \caption[Drawings of the resonance modes in split-ring resonators]{Three low-frequency resonances in the combined SRRs: \textbf{(a)} magnetic resonance, \textbf{(b)} antiparallel electric resonance, \textbf{(c)} parallel electric resonance.\\ The actual order of the first two resonances in the spectrum is determined by the inner capacitor radius $\rho_c$ and other parameters of the resonator.} \label{fg_emcSRR_resonances} \centering 
 \begin{overpic}[height=0.22\textwidth]{img/drawing_emcSRRpad_resM.pdf}\put (1,81) {\textbf{(a)}}\end{overpic}\quad
 \begin{overpic}[height=0.22\textwidth]{img/drawing_emcSRRpad_resE2.pdf}\put (1,81) {\textbf{(b)}}\end{overpic}\quad
 \begin{overpic}[height=0.22\textwidth]{img/drawing_emcSRRpad_resE2b.pdf}\put (5,54) {\textbf{(c)}}
@@ -472,12 +472,12 @@ However, a new electric resonance (Fig. \ref{fg_emcSRR_resonances}b) is introduc
 
 %}}}
 \paragraph{Tuning the frequency of the antiparallel electric resonance}%{{{
-The spectra of the cut wires (Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}) suggest that each electric resonance, if not preceded by a Bragg band gap or excessively lossy, introduces a region in spectrum where the local effective permittivity has a physically meaningful and negative value. Under the same condition in Fig. \ref{fg_SRR_principles}, the magnetic resonance introduces a region of $\meff(f) < 0$.
-\begin{figure}[t] \caption[Combined electric-magnetic resonator $|r|$, $|t|$ and $\Neff$ (retrieved by the s-parameter method)]{Combined electric-magnetic resonator: amplitude of \textbf{(a)} reflectance, \textbf{(b)} transmittance and \textbf{(c)} effective index of refraction $\Neff = \Neff' + \ii \Neff''$.  
+The spectra of cut wires (Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}) suggest that each electric resonance, unless it is preceded by a Bragg band gap, or excessively lossy, introduces a region in the spectrum where the local effective permittivity has a physically meaningful and negative value. Under the same conditions, the magnetic resonance introduces a region of $\meff(f) < 0$.
+\begin{figure}[t] \caption[Computed  electric-magnetic resonator $|r|$, $|t|$ and $\Neff$ (retrieved by the s-parameter method)]{Simulated spectra of the electric-magnetic resonators shown in Fig. \ref{fg_SRR_elmag}: amplitude of \textbf{(a)} reflectance, \textbf{(b)} transmittance and \textbf{(c)} effective index of refraction $\Neff = \Neff' + \ii \Neff''$.  
 % todo check the structure parameters
 %Outer ring radius $\rho = 30$ $\mu$m, conductor cross-section $\Delta\rho = 6$ $\mu$m, unit cell size $a=100$ $\mu$m. \\
 %Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with a symmetric SRR (double split width $d=2$ $\mu$m) and the same symmetric SRR with wire grid added.  The effective parameters for the asymmetric SRR could not be determined by the scattering parameters method.  %TODO params and comment 
-The frequency of the electric resonance is influenced by the radius $\rho_c$ of the capacitor on the central spoke.
+The frequency of the electric resonance is tuned by the series capacitor radius $\rho_c$ on the central bar.
 } \label{fg_emSRR_icr} \centering \vspace{-3mm} 
 \begin{tabular}{r}
 \begin{overpic}[width=0.85\textwidth]{img-meep/emSRR_inner_capacitor_radius_scan_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.056\textwidth}\\
@@ -486,20 +486,20 @@ The frequency of the electric resonance is influenced by the radius $\rho_c$ of 
 \end{tabular}
 \end{figure}
 
-By optimizing the structure geometry, the resonances can be tuned against each other so that the regions of $\eeff(f) < 0$ and $\meff(f) < 0$ overlap. This is the conventional approach to design a metamaterial with a negative index of refraction; applying it to the electro-magnetic resonator leads to an array of independent, nonconnected elements, which may be an advantage over embedding SRRs in a wire array. One of the means of tuning the antiparallel electric resonance frequency is to divide the central bar by an \textit{inner}\index{inner} capacitor as shown in Fig. \ref{fg_SRR_elmag}b. 
+By optimizing the structure geometry, the resonances can be tuned against each other so that the regions of $\eeff(f) < 0$ and $\meff(f) < 0$ overlap. This is the conventional approach to design a metamaterial with a negative index of refraction; applying it to the electro-magnetic resonator leads to an array of independent, separate elements, which may be an advantage over embedding SRRs in a wire array. One of the means of tuning the antiparallel electric resonance frequency is to divide the central bar by an \textit{inner}\index{inner} capacitor as shown in Fig. \ref{fg_SRR_elmag}b. 
 
-For the inner capacitor being relatively small, with radius $\rho_c = 6$ $\upmu$m, the electric resonance is located around 1150~GHz, and it shifts down to 940~GHz when $\rho_c$ is increased to 8 $\upmu$m. On the contrary, the magnetic resonance is virtually independent of $\rho_c$ and remains close to 800~GHz. Both individual resonances can be clearly identified as points of zero transmittance and as corresponding steep, but still continuous, drops in the refractive index (red and light green curves in Fig. \ref{fg_emSRR_icr}).  For $\rho_c \leq 8$ $\upmu$m, the resonances are separated by a photonic band, indicating that the regions of  $\eeff(f) < 0$ and $\meff(f) < 0$ do not overlap. 
+If the inner capacitor is relatively small, with inner capacitor radius $\rho_c = 6$ $\upmu$m, the electric resonance is located around 1150~GHz, and it shifts down to 940~GHz when $\rho_c$ is increased to 8 $\upmu$m. By contrast, the magnetic resonance is virtually independent of $\rho_c$ and remains close to 800~GHz. Both individual resonances can be clearly identified in the spectra by the points of zero transmittance and by the corresponding steep, but still continuous, drops in the refractive index (red and light green curves in Fig. \ref{fg_emSRR_icr}).  For $\rho_c \leq 8$ $\upmu$m, the resonances are separated by a photonic band, indicating that the regions of  $\eeff(f) < 0$ and $\meff(f) < 0$ do not overlap. 
 
 An attempt to further reduce the frequency of the electric resonance to obtain negative index of refraction $\Neff'<0$ in the region of overlap, however, leads to confusing results (cyan curves in Fig. \ref{fg_emSRR_icr}). 
-For $\rho_c \in \langle10, 16\rangle$ $\upmu$m, the scattering parameters method retrieves apparently erroneous spectra with two disticnct band gaps, but without any individual resonance.
+For $\rho_c \in \langle10, 16\rangle$ $\upmu$m, the scattering parameters method retrieves apparently erroneous spectra with two distinct band gaps, but without any individual resonance.
 A more detailed parametric scan through these problematic values of $\rho_c$ can be found in Fig. \ref{fg_emSRR_icrscan}.
 
-\begin{figure}[t] \caption[Combined electric-magnetic resonator $|r|$ and $\Neff''$ (scan through the inner capacitor radius)]{\textbf{(a)} Reflectance and \textbf{(b)} the imaginary part of the refractive index, as questionably retrieved by the scattering parameters method, for the electro-magnetic split-ring resonator} \label{fg_emSRR_icrscan} \centering 
+\begin{figure}[t] \caption[Combined electric-magnetic resonator $|r|$ and $\Neff''$ (scan through the inner capacitor radius)]{\textbf{(a)} Reflectance and \textbf{(b)} the imaginary part of the refractive index of the electro-magnetic split-ring resonator, retrieved by the scattering parameters method, } \label{fg_emSRR_icrscan} \centering 
 \begin{overpic}[width=0.48\textwidth]{img-meep/emSRR_inner_capacitor_radius_scan_HR_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
 \begin{overpic}[width=0.48\textwidth]{img-meep/emSRR_inner_capacitor_radius_scan_HR_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}  
 \end{figure}
 
-The effective parameters retrieved by the s-parameters method become easy to interpret for $\rho_c \geq 18$ $\upmu$m. The antiparallel resonance at 690~GHz is again well separated from the magnetic one, which remains near its original frequency (dark blue curves in Fig. \ref{fg_emSRR_icr}). Further explanation of these results is beyond the capabilities of the scattering parameters method, and necessitate the more expensive computation using the current-driven homogenisation (CDH).
+The effective parameters retrieved by the s-parameters method become easy to interpret for $\rho_c \geq 18$ $\upmu$m. The antiparallel resonance at 690~GHz is again well separated from the magnetic one, which remains near its original frequency (dark blue curves in Fig. \ref{fg_emSRR_icr}). Further explanation of these results is beyond the capabilities of the scattering parameters method, and necessitate the more expensive computational approach using the current-driven homogenisation (CDH) method.
 
 %}}}
 \begin{figure}[t] \caption[Dispersion curves for the electro-magnetic resonator for $\rho_c\in{6,8}$ $\upmu$m (comparison of the CDH and s-parameter results)]{Current-driven homogenization results for the combined electric-magnetic resonator, differing by the inner capacitor radius \textbf{(a)} $\rho_c = 6$ $\mu$m, \textbf{(b)} $\rho_c = 8$ $\mu$m.} \label{fg_cdh1} \centering %{{{
@@ -517,15 +517,15 @@ The effective parameters retrieved by the s-parameters method become easy to int
 \end{figure}
 %}}}
 \paragraph{Current-driven homogenization and spatial dispersion}%{{{
-CDH results for the same structure parameters, $\rho_c\in\{6,8,10,18\}$ $\upmu$m are presented in Figs. \ref{fg_cdh1} and \ref{fg_cdh2}. For comparison, the dispersion curves corresponding to the $\Neff'(f)$ retrieved by the scattering parameters method are shown as green curves.
+CDH results for the same structure parameters, $\rho_c\in\{6,8,10,18\}$ $\upmu$m are presented in Figs. \ref{fg_cdh1} and \ref{fg_cdh2}. For comparison, the dispersion curves corresponding to the $\Neff'(f)$ retrieved by the scattering parameters method are shown by green lines.
 
-For $\rho_c=6$ $\upmu$m, both retrieval methods give relatively similar results, and they correctly identify two indirect band gaps corresponding to the magnetic and antiparallel electric resonances, respectively. The match is not as good as in Fig. \ref{fg_cdh5}, though -- namely the magnetic resonance around 800~GHz appears somewhat wider when retrieved by the s-parameters method, compared to CDH. The deviation can be attributed to the structure being surrounded by vacuum instead of sensing the near fields of the surrounding cells (c.f. page \pageref{cdhadvantages}).
+For $\rho_c=6$ $\upmu$m, both retrieval methods yield relatively similar results, and they correctly identify two indirect band gaps corresponding to the magnetic and antiparallel electric resonances, respectively. The match is not as good as in Fig. \ref{fg_cdh5}, though. Namely the magnetic resonance around 800~GHz appears somewhat wider when retrieved by the s-parameters method, compared to CDH. The deviation can be attributed to the structure being surrounded by vacuum instead of sensing the near fields of the surrounding cells (c.f. page \pageref{cdhadvantages}).
 
-The next plot for $\rho_c=8$ $\upmu$m was not chosen randomly, since for this inner capacitor radius, the spatial dispersion starts to substantially affect the dispersion curve of the second photonic band. It starts in the $\mathbf \Gamma$ point at 794~GHz with a positive group velocity, reaches its maximum of 890~GHz, then the group velocity changes its sign and the band ends in the $\mathbf X$ point at ca. 887~GHz. At a given frequency between 887 and 890~GHz, two solutions of the wave equation exist that differ merely by the wavevector. The s-parameters method has no means of distinguishing them, and accordingly the retrieved dispersion curve deviates from that retrieved by CDH.
+The value of $\rho_c=8$ $\upmu$m used for the next plot was not chosen randomly, since for this inner capacitor radius, the spatial dispersion starts to affect substantially the dispersion curve of the second photonic band. It starts in the $\mathbf \Gamma$ point at 794~GHz with a positive group velocity and reaches its maximum of 890~GHz, but with growing $K$, the group velocity changes its sign and the band ends in the $\mathbf X$ point at ca. 887~GHz. At a given frequency between 887 and 890~GHz, two solutions of the wave equation exist that differ merely by the wavevector. The s-parameters method has no means of distinguishing them, and accordingly, the retrieved dispersion curve deviates from that retrieved by CDH.
 
-Spatial dispersion is even more evident in Fig. \ref{fg_cdh2} where the frequencies of the $\mathbf \Gamma$ and $\mathbf X$ points come close to each other, i.e. 784 and 795~GHz, respectively. The central maximum of the band is on 828~GHz, which explains why the s-parameters	method no longer determines the dispersion curve shape correctly, nor it identifies any of the resonances.
+The spatial dispersion is even more evident in Fig. \ref{fg_cdh2}, where the frequencies of the second photonic band in the $\mathbf \Gamma$ and $\mathbf X$ points come close to each other, amounting to 784 and 795~GHz, respectively. The central maximum of the band is on 828~GHz, which explains why the s-parameters	method no longer correctly determines the dispersion curve shape, nor it identifies any of the resonances.
 
-These issues persist until $\rho_c \geq 18$ $\upmu$m, when the second photonic band becomes a relatively flat function of the wavenumber $K$. Both resonances are then again retrieved correctly, except for a systematic error in the frequency determination which may arise from the already discussed difference in the simulation geometry used by the s-parameters method.
+These issues persist until $\rho_c \geq 18$ $\upmu$m, when the second photonic band becomes a relatively flat function of the wavenumber $K$. Both resonances are then retrieved correctly again, except for a systematic error in the frequency determination which may arise from the already discussed difference in the simulation geometry used by the s-parameters method.
 
 %}}}
 \begin{figure}[t] \caption[Dispersion curves for the electro-magnetic resonator for $\rho_c\in{10,18}$ $\upmu$m (comparison of the CDH and s-parameter results)]{Current-driven homogenization results for the combined electric-magnetic resonator, differing by the inner capacitor radius \textbf{(a)} $\rho_c = 10$ $\mu$m, \textbf{(b)} $\rho_c = 18$ $\mu$m.} \label{fg_cdh2} \centering %{{{
@@ -543,28 +543,27 @@ These issues persist until $\rho_c \geq 18$ $\upmu$m, when the second photonic b
 \end{figure}
 %}}}
 \paragraph{Is this a negative-refraction structure?}%{{{
-The electro-magnetic resonator was examined as an example structure which, particularly in its magnetic resonance, exhibits strong electric quadrupole, leading to prominent spatial dispersion. Figures \ref{fg_cdh1} and \ref{fg_cdh2} illustrated that not only the s-parameters retrieval algorithm fails, but also the very idea of describing the structure behaviour in terms of refractive index $\Neff(f)$ does not guarantee enough degrees of freedom to express the physical reality.
-Similar failure of the s-parameters method in homogenization of an array of SRRs in a wire lattice was reported previously, \cite{rockstuhl2008transition}, showing that $\Neff(f)$ can be determined only for relatively big spacing between the metallic  elements.
+The electro-magnetic resonator was examined as an example structure which, particularly in its magnetic resonance, exhibits a strong electric quadrupole moment, leading to a prominent spatial dispersion. Figures \ref{fg_cdh1} and \ref{fg_cdh2} illustrated that not only the s-parameters retrieval algorithm fails, but also the very idea of describing the structure behaviour in terms of refractive index $\Neff(f)$ can not describe all dispersion curves observed the physical reality.
+A similar failure of the s-parameters method in homogenization of an array of SRRs in a wire lattice was reported previously, \cite{rockstuhl2008transition}, showing that $\Neff(f)$ can be determined only for a relatively big spacing between the metallic  elements.
 % TODO \cite{marques2011bulk} Magneto-Inductive Waves -- at frequencies near the ring resonance and come from the inductive coupling between rings
 % ... and maybe this was noted by Silveirinha2009
 % Nonlocal homogenization of an array of cubic particles made of resonant rings
 
-For particular values of the inner capacitor radius $\rho_c \in \langle8,16\rangle$ $\upmu$m, the second photonic band supports simultaneously a wave of group velocity collinear with the phase velocity, and an \textit{additional wave}\index{additional wave} with higher wavenumber and opposite direction of these velocities. 
+For particular values of the inner capacitor radius $\rho_c \in \langle8,16\rangle$ $\upmu$m, the second photonic band supports simultaneously a wave of group velocity collinear with the phase velocity, and an \textit{additional wave}\index{additional wave} with a higher wavenumber and opposite direction of these velocities. 
 
-Provided the auxiliary boundary conditions are arranged to couple all energy exclusively to this additional wave, with the relatively high Bloch's wavevector, the interface of the metamaterial with vacuum should indeed exhibit negative refraction. The index of refraction, however, is not sufficient for description of this kind of metamaterial -- even for propagation parallel to the optical axis.
+The interface of this metamaterial with vacuum should exhibit negative refraction, provided the auxiliary boundary conditions are arranged to couple all energy exclusively to the described additional wave with a relatively high Bloch's wavevector,  The index of refraction, however, is not sufficient for description of this kind of metamaterial -- even for propagation nearly parallel to the optical axis.
 
 %}}}
 \FloatBarrier %====================================================================================================
 %}}} /section
 \section{Dielectric spheres} %{{{
-% \cite{prosvirnin2015planar} % todo read
 \paragraph{Mie resonances}%{{{
-Already in Eqs. (\ref{eq_rho_n1},\ref{eq_rho_n2}) it was assumed that at higher frequencies, there is no difference in the effect of conduction and polarisation currents. The current conducted around a split-ring resonator has a direct analogy in the polarisation current circulating in a dielectric particle, be it a torus of dielectric \cite{jelinek2009artificial}, or a sphere. The capacitor of the SRR is then replaced by the distributed capacitance of the whole dielectric. For the first resonance in spherical dielectric particles, the magnetic dipole moment induced by the polarisation current goes through the sphere axis. The resonance frequency is inversely proportional to the radius $\rho$ of the sphere, and it decreases monotonously with the growth of the dielectric permittivity $\epsrl$.
+Already in Eqs. (\ref{eq_rho_n1}, \ref{eq_rho_n2}) it was assumed that at higher frequencies, there is no difference between the effect of conduction and the polarisation currents. The current flowing around a split-ring resonator has a direct analogy in the polarisation current circulating in a dielectric particle, be it a torus of dielectric \cite{jelinek2009artificial}, or a sphere \cite{obrien2002photonic}. The capacitor of the SRR is then replaced by the distributed capacitance of the whole dielectric. For the first resonance in spherical dielectric particles, the magnetic dipole moment induced by the polarisation current points through the sphere center, as can be found from the resonant field shape in Fig. \ref{fg_Mie}a. The resonance frequency is inversely proportional to the radius $\rho$ of the sphere and it decreases monotonously with the growth of the dielectric permittivity $\epsrl$.
 
-The second resonance has an electric dipole moment. It is similar to the magnetic one, but the electric and magnetic fields exchange their topology: The magnetic field circulates around the axis of the sphere, and the polarisation current forms the electric dipole. In spite of the similarity of both resonances, the frequency of the magnetic resonance is lower, since it allows the electric field to be more localized in the dielectric volume. In contrast, for the electric resonance, most of the streamlines of the electric field have to pass through the surrounding air (see Fig \ref{fg_Mie}a,b).  %merlin2009metamaterials
+The second resonance (Fig. \ref{fg_Mie}b) has an electric dipole moment. It is similar to the magnetic one, but the electric and magnetic fields exchange their topology: The magnetic field circulates around the axis of the sphere, and the polarisation current forms the electric dipole. In spite of the similarity of both resonances, the frequency of the magnetic resonance is lower, since it allows the electric field to be more localized in the dielectric volume. In contrast, for the electric resonance, most of the streamlines of the electric field have to pass through the surrounding air (see Fig \ref{fg_Mie}a,b).  %merlin2009metamaterials
 
 \begin{figure}[h]  %% fg_Spheres_lossscan
-	\caption[Dielectric spheres: Snapshot of the electric and magnetic fields in the first Mie resonance]{The electric field component $E_x$ (shaded in blue-white-red) and magnetic field components $H_y,H_z$ (plotted as vectors) for \textbf{(a)} the magnetic and \textbf{(b)} electric Mie resonance in a dielectric sphere. The figure is in the $y$-$z$ plane of mirror symmetry, so the fields have no other nonzero components than shown here. On the right side, the vectors depict right-hand field triplet of the incident plane wave.}\label{fg_Mie}  \centering 
+	\caption[Dielectric spheres: Snapshot of the electric and magnetic fields in the first Mie resonance]{The electric field component $E_x$ (shaded in blue-white-red) and magnetic field components $H_y,H_z$ (plotted as vectors) for \textbf{(a)} the magnetic and \textbf{(b)} electric Mie resonances in a dielectric sphere. The figure is in the $y$-$z$ plane of mirror symmetry, so the fields have no other nonzero components than those shown here. On the right side, the vectors depict the right-hand vector triplet of the incident plane wave.}\label{fg_Mie}  \centering 
 	\begin{overpic}[width=.35\textwidth]{img/sphere_Mie_mode_magnetic.pdf}  \put(1,93) {\textbf{(a)}} \end{overpic}
     \begin{overpic}[width=.35\textwidth]{img/sphere_Mie_mode_electric.pdf}  \put(1,93) {\textbf{(b)}} 
 		\put(100,30){\includegraphics[width=.12\textwidth]{img/tripletHEK.pdf}}
